--- a/Resources/translations/FSiAdminSecurity.pl.yml
+++ b/Resources/translations/FSiAdminSecurity.pl.yml
@@ -1,5 +1,5 @@
 # Security
-"Bad credentials": Nieprawidłowa nazwa użytkownika lub hasło
+"Bad credentials.": Nieprawidłowa nazwa użytkownika lub hasło
 
 admin:
   login:
