--- a/Resources/translations/FSiAdminSecurity.en.yml
+++ b/Resources/translations/FSiAdminSecurity.en.yml
@@ -20,3 +20,9 @@ admin:
       save: Save
       reset: Reset
   welcome: Hello %username%
+  password_reset:
+    request:
+      mail_sent: Reset password instructions sent
+      mail_info: "To reset your password - please visit:"
+      mail_subject: Reset Password
+      submit: Send me reset password instructions
