--- a/Resources/translations/FSiAdminSecurity.pl.yml
+++ b/Resources/translations/FSiAdminSecurity.pl.yml
@@ -20,3 +20,9 @@ admin:
       save: Zapisz
       reset: Resetuj
   welcome: Witaj %username%
+  password_reset:
+    request:
+      mail_sent: Instrukcja zmiany hasła została wysłana pod podany adres email
+      mail_info: "Aby ustawić nowe hasło proszę otworzyć link:"
+      mail_subject: Zmiana hasła
+      submit: Wyślij instrukcję zmiany hasła
