Do not generate confirmation token on every request

--- a/Resources/translations/FSiAdminSecurity.en.yml
+++ b/Resources/translations/FSiAdminSecurity.en.yml
@@ -26,3 +26,4 @@ admin:
       mail_info: "To reset your password - please visit:"
       mail_subject: Reset Password
       submit: Send me reset password instructions
+      already_requested: You already requested password reset instructions. Check your email.
