--- a/Resources/translations/FSiAdminSecurity.pl.yml
+++ b/Resources/translations/FSiAdminSecurity.pl.yml
@@ -23,7 +23,9 @@ admin:
   password_reset:
     request:
       mail_sent: Instrukcja zmiany hasła została wysłana pod podany adres email
-      mail_info: "Aby ustawić nowe hasło proszę otworzyć link:"
       mail_subject: Zmiana hasła
+      mail:
+        info: "Aby ustawić nowe hasło proszę otworzyć link:"
+        requested_by: "%ip% - %user_agent%"
       submit: Wyślij instrukcję zmiany hasła
       already_requested: Instrukcja zmiany hasła została już wysłana. Sprawdź pocztę.
