--- a/Resources/translations/FSiAdminSecurity.pl.yml
+++ b/Resources/translations/FSiAdminSecurity.pl.yml
@@ -40,3 +40,10 @@ admin:
           change_password: Zmień hasło
       message:
         success: Twoje hasło zostało poprawnie zmienione
+  activation:
+    mail:
+      subject: Aktywacja użytkownika
+      info: "Aby aktywować twoje konto proszę otworzyć link:"
+    message:
+      change_password_success: Twoje hasło zostało poprawnie zmienione oraz twoje konto zostało aktywowane
+      success: Twoje konto zostało poprawnie aktywowane
