--- a/Resources/translations/validators.en.yml
+++ b/Resources/translations/validators.en.yml
@@ -1,2 +1,18 @@
-admin:
-  invalid_password: Invalid password
+admin_user:
+  username:
+    already_used: The username is already used
+    blank: Please enter a username
+    short: "[-Inf,Inf]The username is too short"
+    long: "[-Inf,Inf]The username is too long"
+  email:
+    already_used: The email is already used
+    blank: Please enter an email
+    short: "[-Inf,Inf]The email is too short"
+    long: "[-Inf,Inf]The email is too long"
+    invalid: The email is not valid
+  password:
+    blank: Please enter a password
+    short: "[-Inf,Inf]The password is too short"
+    mismatch: The entered passwords don't match
+  current_password:
+    invalid: The entered password is invalid
