--- a/Resources/translations/validators.pl.yml
+++ b/Resources/translations/validators.pl.yml
@@ -1,2 +1,18 @@
-admin:
-  invalid_password: Nieprawidłowe hasło
+admin_user:
+  username:
+    already_used: Ta nazwa użytkownika jest już zajęta
+    blank: Proszę podać nazwę użytkownika
+    short: "[-Inf,Inf]Nazwa użytkownika jest za krótka"
+    long: "[-Inf,Inf]Nazwa użytkownika jest za długa"
+  email:
+    already_used: Podany email jest zajęty
+    blank: Proszę podać adres email
+    short: "[-Inf,Inf]Podany email jest za krótki"
+    long: "[-Inf,Inf]Podany email jest za długi"
+    invalid: Podany adres email jest nieprawidłowy
+  password:
+    blank: Proszę podać hasło
+    short: "[-Inf,Inf]Podane hasło jest za krótkie"
+    mismatch: Hasła nie pasują do siebie
+  current_password:
+    invalid: Podane hasło jest nieprawidłowe
