--- a/Resources/translations/FSiAdminSecurity.pl.yml
+++ b/Resources/translations/FSiAdminSecurity.pl.yml
@@ -52,3 +52,13 @@ admin:
       change_password: Proszę ustawić nowe hasło aby aktywować konto
       change_password_success: Twoje hasło zostało poprawnie zmienione oraz twoje konto zostało aktywowane
       success: Twoje konto zostało poprawnie aktywowane
+  user_list:
+    datagrid:
+      email: Email
+      enabled: Włączony?
+      last_login: Ostatnie logowanie
+      roles: Role
+      actions: Akcje
+    batch_action:
+      delete: Usuń
+      password_reset: Przypomnij hasło
