List title. Password reset & activation columns

--- a/Resources/translations/FSiAdminSecurity.en.yml
+++ b/Resources/translations/FSiAdminSecurity.en.yml
@@ -57,6 +57,8 @@ admin:
       email: Email
       enabled: Enabled?
       last_login: Last login at
+      password_reset_token: Password reset request
+      activation_token: Activation request
       roles: Roles
       actions: Actions
     batch_action:
