--- a/Resources/translations/FSiAdminSecurity.pl.yml
+++ b/Resources/translations/FSiAdminSecurity.pl.yml
@@ -64,3 +64,8 @@ admin:
     batch_action:
       delete: Usuń
       password_reset: Przypomnij hasło
+
+crud:
+  list:
+    batch:
+      empty_choice: Wybierz akcję
