Prevent deleting current user

--- a/Resources/translations/FSiAdminSecurity.en.yml
+++ b/Resources/translations/FSiAdminSecurity.en.yml
@@ -55,11 +55,10 @@ admin:
   user_list:
     datagrid:
       email: Email
-      enabled: Enabled?
+      enabled: Active
       last_login: Last login at
       password_reset_token: Password reset request
       activation_token: Activation request
-      roles: Roles
       actions: Actions
     batch_action:
       delete: Delete
