--- a/Resources/translations/FSiAdminSecurity.pl.yml
+++ b/Resources/translations/FSiAdminSecurity.pl.yml
@@ -55,11 +55,10 @@ admin:
   user_list:
     datagrid:
       email: Email
-      enabled: Włączony?
+      enabled: Aktywny
       last_login: Ostatnie logowanie
       password_reset_token: Prośba o zresetowanie hasła
       activation_token: Prośba o aktywację
-      roles: Role
       actions: Akcje
     batch_action:
       delete: Usuń
