--- a/Resources/translations/FSiAdminSecurity.en.yml
+++ b/Resources/translations/FSiAdminSecurity.en.yml
@@ -26,7 +26,7 @@ admin:
         email: Email
         button:
           send: Send me instructions
-      mail_sent: Reset password instructions sent
+      mail_sent_if_correct: If the provided address was correct, you should receive instructions on resetting your password.
       mail_subject: Reset Password
       mail:
         info: "To reset your password - please visit:"
