Added info about link validity in email

--- a/Resources/translations/FSiAdminSecurity.en.yml
+++ b/Resources/translations/FSiAdminSecurity.en.yml
@@ -65,7 +65,8 @@ admin:
   admin_user:
     email: Email address
     roles: User roles
-
+  mail:
+    link_valid: Link valid until
 crud:
   list:
     batch:
